<resources>
    <string name="app_name">diet</string>
    <string name="app_title">소영이 다이어트</string>
    <string name="intro_text">소영이의\n다이어트를\n응원합니다!</string>
    <string name="diet">Diet</string>
    <string name="calendar">캘린더</string>
    <string name="graph">그래프</string>
    <string name="slide">슬라이드</string>
    <string name="picture">사진</string>
    <string name="profile">프로필</string>

    <string name="title_calendar">소영이의 다이어트 일지</string>
    <string name="title_graph">소영이 몸무게 그래프</string>
    <string name="title_slide">소영이 뱃살 사진</string>
    <string name="title_profile">소영이 프로필</string>

    <string name="title_write_type">다이어트 일지 관리</string>

    <string name="nickname_empty">닉네임을 설정해 주세요.</string>

    <string name="add_profile">프로필 등록하기</string>
    <string name="add_profile_title">프로필 등록</string>
    <string name="profile_edit_btn">프로필 수정하기</string>
    <string name="profile_edit">프로필 수정</string>

    <string name="add_profile_text_profile_img">프로필 사진 (선택)</string>
    <string name="add_profile_text_nickname">닉네임</string>
    <string name="add_profile_text_height">키</string>
    <string name="add_profile_text_init_weight">시작 몸무게</string>
    <string name="add_profile_text_goal_weight">목표 몸무게</string>
    <string name="add_profile_text_gender">성별</string>
    <string name="add_profile_text_birth">생년월일</string>
    <string name="add_profile_text_type">운동 종류</string>
    <string name="add_profile_start_work_out">운동 시작일</string>
    <string name="add_profile_end_work_out">운동 종료일</string>
    <string name="now_weight">현재 몸무게</string>
    <string name="diet_text">다이어트</string>
    <string name="bulk_up">벌크업</string>
    <string name="bmi">BMI</string>

    <string name="no_data">-</string>

    <string name="cm">cm</string>
    <string name="kg">kg</string>

    <string name="cancel">취소</string>
    <string name="config">확인</string>

    <string name="view_detail">상세보기</string>
    <string name="add">추가</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="post">등록</string>

    <string name="folder">폴더</string>
    <string name="save">저장</string>

    <string name="read_more">… 더보기</string>

    <string name="camera_permission">앱 설정에서 카메라 권한을 허용해 주세요.</string>

    <string name="min_issue_text">최소 3글자</string>

    <string name="food_name_hint">ex) 점심,저녁,야식 (최대 10자)</string>

    <string name="try_delete">삭제 하시겠습니까?</string>

    <string name="year">년</string>
    <string name="month">월</string>

    <string name="add_profile_complete">프로필 등록이 완료 됐습니다.</string>
    <string name="edit_profile_complete">프로필 수정이 완료 됐습니다.</string>

    <string name="add_profile_text_nickname_hint">닉네임을 입력해 주세요 (최대 15자)</string>
    <string name="add_profile_text_height_hint">키를 거짓말 없이 입력하세요 (확인할거에요)</string>
    <string name="add_profile_text_init_weight_hint">다이어트 시작 몸무게를 입력해 주세요.</string>
    <string name="add_profile_text_goal_weight_hint">다이어트 목표 몸무게를 입력해 주세요.</string>

    <string name="add_good_list">좋았던 일을 등록해 주세요.</string>
    <string name="add_bad_list">나빴던 일을 등록해 주세요.</string>
    <string name="edit_good_list">좋았던 일을 수정해 주세요.</string>
    <string name="edit_bad_list">나빴던 일을 수정해 주세요.</string>

    <string name="do_not_lie">거짓말 없이 입력하세요</string>

    <string name="plz_work_out_type">운동 종목을 입력해주세요 (최대 10자)</string>
    <string name="while_time">~</string>
    <string name="time_center">:</string>

    <string name="today_work_out">오늘한 운동을 기록해 보세요</string>

    <string name="post_weight">몸무게 등록</string>
    <string name="edit_weight">몸무게 수정</string>

    <string name="today_content_hint">오늘 있었던 일들을 작성해 주세요.</string>

    <string name="today_weight">오늘의 몸무게를 입력해 주세요</string>

    <string name="profile_help">프로필을 등록하고 여러가지 정보들을 확인해 보세요.\n대신 거짓으로 작성하면 양심에 털나는거 알죠??\n특히 키 올림해서 작성하지 마세요.</string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <string name="test_1">main</string>
    <string name="test_2">graph</string>
    <string name="test_3">slide</string>
    <string name="test_4">profile</string>

    <string name="food">오늘의 음식</string>
    <string name="body">바디 체크</string>
    <string name="good">좋은 일들</string>
    <string name="bad">나쁜 일들</string>
    <string name="weight">몸무게</string>
    <string name="content">일기장</string>
    <string name="work_out">운동</string>
    <string name="age">나이</string>

    <string name="female">여성</string>
    <string name="male">남성</string>

    <string name="goal_complete">목표 달성!!</string>

    <string name="photo_title">사진을 선택해주세요</string>
    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>

    <string name="plz_photo_name">사진의 이름을 입력해 주세요.</string>
    <string name="day">일</string>

    <string name="min_weight">최저 몸무게</string>
    <string name="max_weight">최대 몸무게</string>

    <string name="work_out_cnt">1시간 이상 운동</string>
    <string name="total_work_out">총 운동시간</string>

    <string formatted="false" name="now_weight_kg">%.1fkg</string>

    <string name="underweight">저체중</string>
    <string name="normal_weight">정상체중</string>
    <string name="obesity">비만</string>
    <string name="overweight">과체중</string>

    <string name="slide_time">슬라이드 시간</string>

    <string name="second_1">1초</string>
    <string name="second_2">2초</string>
    <string name="second_3">3초</string>

    <string name="view_slide">슬라이드 보기</string>

    <string name="food_picture">음식 사진</string>
    <string name="body_picture">바디체크 사진</string>
    <string name="body_slide">바디체크 슬라이드</string>

    <string name="weight_graph">몸무게 그래프</string>
    <string name="work_out_graph">운동 그래프</string>

    <string name="slide_range_title">슬라이드 기간 설정</string>

    <string name="all_view">전체 기간 보기</string>
    <string name="range_view">기간 선택</string>

    <string name="select_complete">선택 완료</string>
    <string name="start">시작</string>
    <string name="exit">나가기</string>
    <string name="replay">다시 보기</string>

    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>

    <string name="weight_title">몸무게 (kg)</string>
    <string name="work_out_title">운동시간 (분)</string>

    <string name="no_date">미래는 아직 오지 않았어요\n(조작 금지)</string>

    <string name="bmi_info">체질량지수 (BMI = body mass index)는 카우프지수로 비만을 평가하는 지수이며 세계적으로 쓰이는 공통표준 지수입니다.\n체지방의 정도를 표준체중보다 비교적 정확하게 반영할 수 있고 매우 간단히 규정할 수 있는 장점이 있습니다.</string>

    <string name="underweight_info">저체중에 해당합니다. 저체중도 골다공증을 포함한 각종 질환의 위험요인입니다. 균형있는 식사와 규칙적인 운동으로 적정체중을 유지하세요.</string>
    <string name="normal_weight_info">정상체중입니다. 규칙적인 운동과 좋은 생활습관을 통해 현재의 체중을 유지하시기 바랍니다. 다만, 정상체중이어도 체지방율이 높을 수 있으니 체지방과 근육량을 한번 체크해보세요.</string>
    <string name="obesity_info">비만입니다. 앞으로 당뇨, 고혈압, 고지혈증 등의 질병의 발생과 이로 인한 합병증의 위험이 증가됩니다. 매일 30분이상, 약간 숨이 찰 정도의 유산소운동과 근력운동을 하고 식사조절을 통해 체중을 줄이세요.</string>
    <string name="overweight_info">과체중입니다. 매일 30분이상, 약간 숨이 찰 정도의 운동과 식사조절, 생활습관 교정을 통해 적정체중을 유지해보세요.</string>
</resources>