<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.bellminp.diet.ui.main.fragment.CalendarViewModel"/>
        <import type="android.view.View"/>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpUsage">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_white_8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="70dp"
                    android:id="@+id/btn_date"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/color_icn_select"
                    android:textStyle="bold"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/shape_white_8"
                    >

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_2"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/sunday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_1"
                        app:layout_constraintEnd_toStartOf="@id/tv_3"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/monday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_2"
                        app:layout_constraintEnd_toStartOf="@id/tv_4"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/tuesday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_3"
                        app:layout_constraintEnd_toStartOf="@id/tv_5"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/wednesday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_4"
                        app:layout_constraintEnd_toStartOf="@id/tv_6"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/thursday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_5"
                        app:layout_constraintEnd_toStartOf="@id/tv_7"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/friday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_6"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/saturday"
                        android:textSize="14dp"
                        android:textColor="@color/color_icn_select"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_7"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layout_day"
                    android:layout_marginTop="16dp"
                    android:id="@+id/recyclerview_calendar"
                    android:overScrollMode="never"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@id/recyclerview_calendar"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


