<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.bellminp.diet.ui.body_slide.setting.BodySlideSettingViewModel" />

        <variable
            name="topViewModel"
            type="com.bellminp.diet.ui.top.TopViewModel" />


        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:ignore="SpUsage"
        >

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/btn_all"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_range"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/selector_range"
            android:button="@null"
            android:textStyle="bold"
            android:textColor="@{vm.checkAll ? @color/white : @color/color_icn_select}"
            android:gravity="center"
            android:textSize="14dp"
            android:text="@string/all_view"
            android:checked="@={vm.checkAll}"
            android:enabled="@{!vm.checkAll}"
            />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/btn_range"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_all"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/selector_range"
            android:button="@null"
            android:textStyle="bold"
            android:textColor="@{vm.checkRange ? @color/white : @color/color_icn_select}"
            android:gravity="center"
            android:textSize="14dp"
            android:text="@string/range_view"
            android:checked="@={vm.checkRange}"
            android:enabled="@{!vm.checkRange}"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_range"
            android:layout_marginTop="16dp"
            android:visibility="@{vm.checkRange ? View.VISIBLE : View.GONE}"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_start_date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_end_date"
                android:background="@drawable/shape_white_8"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:textSize="14dp"
                android:textColor="@color/color_icn_select"
                android:textStyle="bold"
                android:text="@{vm.startDate.empty ? @string/start_date : vm.startDate}"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_end_date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_start_date"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shape_white_8"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:textSize="14dp"
                android:textColor="@color/color_icn_select"
                android:textStyle="bold"
                android:text="@{vm.endDate.empty ? @string/end_date : vm.endDate}"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/btn_end_date"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_btn"
            app:layout_constraintBottom_toTopOf="@id/btn_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/shape_white_8"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="@{vm.checkNext ? View.VISIBLE : View.GONE}"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_body"
                android:layout_marginTop="10dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:overScrollMode="never"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/slide_time"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_view"
            app:layout_constraintStart_toStartOf="@+id/btn_view"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color_icn_select"
            />

        <CheckBox
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintEnd_toStartOf="@id/btn_2"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="2dp"
            android:button="@null"
            android:background="@drawable/selector_range"
            android:checked="@={vm.check1}"
            android:textColor="@{vm.check1 ? @color/white : @color/color_icn_select}"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="@string/second_1"
            android:gravity="center"
            android:enabled="@{!vm.check1}"
            />

        <CheckBox
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintStart_toEndOf="@id/btn_1"
            app:layout_constraintEnd_toStartOf="@id/btn_3"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:button="@null"
            android:background="@drawable/selector_range"
            android:checked="@={vm.check2}"
            android:textColor="@{vm.check2 ? @color/white : @color/color_icn_select}"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="@string/second_2"
            android:gravity="center"
            android:enabled="@{!vm.check2}"
            />

        <CheckBox
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_2"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="2dp"
            android:button="@null"
            android:background="@drawable/selector_range"
            android:checked="@={vm.check3}"
            android:textColor="@{vm.check3 ? @color/white : @color/color_icn_select}"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="@string/second_3"
            android:gravity="center"
            android:enabled="@{!vm.check3}"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_view"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            btnStatus="@{vm.checkNext}"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/view_slide"
            />

        <include
            android:id="@+id/layout_top"
            layout="@layout/layout_top"
            bind:vm = "@{topViewModel}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
