<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.bellminp.diet.ui.dialog.food_name.BottomFoodNameViewModel"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:ignore="SpUsage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_back_12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

            <com.bellminp.diet.ui.custom.RadiusImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:id="@+id/iv_image"
                setImageUri="@{vm.photoUri == null ? vm.photoUrl : vm.photoUri}"
                android:scaleType="centerCrop"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                style="@style/importantTextview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/plz_photo_name"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                />

            <EditText
                android:id="@+id/edit_food_name"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@id/iv_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_image"
                app:layout_constraintBottom_toBottomOf="@id/iv_image"
                android:textColor="@color/color_icn_select"
                android:background="@drawable/shape_white_4"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/food_name_hint"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textColorHint="@color/color_gray"
                android:lineSpacingMultiplier="1.3"
                android:maxLength="10"
                android:text="@={vm.name}"
                tools:ignore="RtlSymmetry"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/layout"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="@id/layout"
            app:layout_constraintEnd_toEndOf="@id/layout"
            android:background="@drawable/shape_back_12"
            >

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_cancel"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@{vm.name.length() &lt; 1 ? @color/color_gray : @color/ok_btn}"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/config"
                android:textStyle="bold"
                android:enabled="@{vm.name.length() &lt; 1 ? false : true}"
                />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_ok"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@color/color_gray_6"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/cancel"
                android:textStyle="bold"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <View
            android:id="@+id/line_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/layout_btn"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
